Edit tradition page: fixed the country not displaying. Changed all icons to orange for accessibility – the contrast of the maroon on black was not accessible. Changed reset button to maroon. Changed bug fix js code for select items for display on iOS devices.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,7 +198,7 @@ nav {
 }
 
 .maroon-button:hover, .maroon-button:focus, .maroon-button:active {
-    background-color: #EF324F;
+    background-color: #8a113f;
     color: #fff;
 }
 
@@ -350,7 +350,7 @@ nav {
 }
 
 .orange-icon {
-    color: #F05A24;
+    color: #F68931;
 }
 
 /*-------------------------------------------------Forms*/
